style.css
* {
  font-family: 'Source Sans Pro', sans-serif;
}

body {
  margin: 0;
  padding: 0;
}

#container{
  background-color: blueviolet;
  text-align: center;
  width: 100%;
  height: 80%;
  margin: auto;
  padding: 1rem;
  position: relative;
  top: 0;
}

#display{
  width: 40vw;
  min-height: 30vw;
  margin: 0 auto;
  background-color: rgb(241, 205, 255);
  text-align: center;
  padding: 1rem;
  border-radius: 5px;
}

#card_display > img{
  width: 20rem;
}

#card_display > p {
  font-size: 1.3rem;
}


h1 {
  color: rgb(21, 10, 10);
  font-size: 2rem;
}

h2 {
  color: rgb(21, 10, 10);
  font-size: 1.5rem;
}

button {
  font-size: 1.5rem;
  padding: 15px 15px;
  margin: 1vh auto;
  background-color: rgba(255,255,255,0.5);
  border-radius: 10px;
  border: 4px solid blueviolet;
}

